@@ -5,8 +5,6 @@
 package pl.edu.icm.unity.saml.sp.web;
 
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -16,14 +14,14 @@ import java.util.Set;
  */
 public class IdPVisalSettings
 {
-	public final String logoUrl;
+	public final String logoURI;
 	public final Set<String> tags;
 	public final String name;
 	
-	public IdPVisalSettings(String logoUrl, Collection<String> tags, String name)
+	public IdPVisalSettings(String logoURI, Collection<String> tags, String name)
 	{
-		this.logoUrl = logoUrl;
-		this.tags = Collections.unmodifiableSet(new HashSet<>(tags));
+		this.logoURI = logoURI;
+		this.tags = Set.copyOf(tags);
 		this.name = name;
 	}
 }
